--- a/Lanchonete/Cardápio.html
+++ b/Lanchonete/Cardápio.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="caixa-logo">
-            <h1><img class="logo" src="img/logo-p.webp" alt="Logo-Lanchonete"></h1>
+            <h1><img class="logo" src="Img/logo-p.webp" alt="Logo-Lanchonete"></h1>
 
             <nav>
                 <ul>
@@ -25,7 +25,7 @@
 
 
     <footer>
-        <img src="img/logo-p.webp" alt="logo">
+        <img src="Img/logo-p.webp" alt="logo">
         <p class="Copyright">&copy; Copyright Big Disney - 2022</p>
     </footer>
     
