--- a/Lanchonete/Contato.html
+++ b/Lanchonete/Contato.html
@@ -16,7 +16,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="Lanchonete.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Cardápio.html">Cardápio</a></li>
                     <li><a href="Contato.html" class="comments">Comentários</a></li>
                 </ul>
